Web.config file commit

--- a/MobilePride.Web/Web.config
+++ b/MobilePride.Web/Web.config
@@ -5,33 +5,8 @@
   -->
 <configuration>
   <connectionStrings>
-    <!--<add name="RRMMS" connectionString="Data Source=DESKTOP-FLO1MI3\SQLEXPRESS;Initial Catalog=RRMMS;Integrated Security=True" providerName="System.Data.SqlClient" />-->
-    <!--<add name="RRMMS" connectionString="Data Source=DESKTOP-E4TIGQT\SQLEXPRESS;Initial Catalog=RRMMS;Integrated Security=True" providerName="System.Data.SqlClient" />-->
-    <!--<add name="RRMMS" connectionString="Data Source=DESKTOP-E4TIGQT\SQLEXPRESS;Initial Catalog=RRMMS;Integrated Security=True" providerName="System.Data.SqlClient" />-->
-    <!--<add name="Dbconnection" connectionString="Server=DESKTOP-7L1ME5C\SQLEXPRESS; Database=Notification; Integrated Security=True" />-->
-    <!--<add name="RRMMS" connectionString="Data Source=SDN-18\SQLEXPRESS; Initial Catalog=RRMMS; Integrated Security=True" providerName="System.Data.SqlClient"/>-->
-    <!--<add name="RockRiverMMS" connectionString="Data Source=(localDb)\v11.0; Initial Catalog=RRMMSNew; Integrated Security=true;" providerName="System.Data.SqlClient" />-->
-    <!--<add name="RRMMS" connectionString="Data Source=SDN-90\SQLEXPRESS; Initial Catalog=RRMMS; Integrated Security=True;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />-->
-
-    <!--<add name="RRMMS" connectionString="Data Source=DESKTOP-QJJRND6\SQLEXPRESS; Initial Catalog=RRMMS; Integrated Security=True;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />-->
-    <!--<add name="RRMMS" connectionString="Data Source=108.168.203.227,7009; Initial Catalog=RRMMS; User ID=RRMMS; Password=tac@3Der2098" providerName="System.Data.SqlClient" />-->
-
-    <!--Verdico-->
-    <!--<add name="RRMMS" connectionString="Data Source=SQL2016.dev.verdico.com; Initial Catalog=RRMMS; User ID=sa; Password=Verdico!" providerName="System.Data.SqlClient" />-->
-    <!--<add name="Dbconnection" connectionString="Server=DESKTOP-7L1ME5C\SQLEXPRESS; Database=Notification; Integrated Security=Trueku" />-->
-    <!--<add name="RRMMS" connectionString="Data Source=SDN-275\SQLEXPRESS; Initial Catalog=RRMMS; Integrated Security=True" providerName="System.Data.SqlClient"/>-->
-    <!--<add name="RockRiverMMS" connectionString="Data Source=(localDb)\v11.0; Initial Catalog=RRMMSNew; Integrated Security=true;" providerName="System.Data.SqlClient" />-->
-    <!--<add name="RRMMS" connectionString="Data Source=SDN-275\SQLEXPRESS; Initial Catalog=RRMMS; Integrated Security=True" providerName="System.Data.SqlClient" />-->
-
-    <!--Local-->
-    <!--<add name="RRMMS" connectionString="Data Source=172.10.1.9; Initial Catalog=RRMMS; User ID=test; Password=test" providerName="System.Data.SqlClient" />-->
-    <!--Public server DEVELOPER-->
-    <!--<add name="RRMMS" connectionString="Data Source=SDN-36\SQLEXPRESS; Initial Catalog=RRMMS; Integrated Security=True" providerName="System.Data.SqlClient" />-->
-    <!--<add name="Dbconnection" connectionString="Server=SDN-36\Ajitsingh Thakur; Database=Notification; Integrated Security=True" />-->
-    <!--<add name="RRMMS" connectionString="Data Source=SQL2016; Initial Catalog=RRMMS; User ID=RRMMS; Password=Password@ad01" providerName="System.Data.SqlClient" />-->
-    <!--<add name="RRMMS" connectionString="Data Source=108.168.203.227,7009; Initial Catalog=RRMMS; User ID=RRMMS; Password=tac@3Der2098" providerName="System.Data.SqlClient" />-->
-    <!--<add name="RRMMS" connectionString="Data Source=SQL2016.dev.verdico.com; Initial Catalog=RRMMS; User ID=sa; Password=Verdico!" providerName="System.Data.SqlClient"/>-->
-    <add name="MobilePride" connectionString="Data Source=(LocalDb)\MSSQLLocalDB; Initial Catalog=MobilePride; Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="MobilePride" connectionString="Data Source=.\SQLEXPRESS; Initial Catalog=MobilePride; Integrated Security=True" providerName="System.Data.SqlClient" />
+    <!--<add name="MobilePride" connectionString="Data Source=(LocalDb)\MSSQLLocalDB; Initial Catalog=MobilePride; Integrated Security=True" providerName="System.Data.SqlClient" />-->
 
     <!-- Azure-->
     <!--<add name="RRMMS" connectionString="Data Source=40.112.184.174; Initial Catalog=RRMMSUAT; User ID=sa; Password=Verdico!" providerName="System.Data.SqlClient" />-->
